//===----------------------------------------------------------------------===//
//
// This source file is part of the Swift Distributed Actors open source project
//
// Copyright (c) 2019 Apple Inc. and the Swift Distributed Actors project authors
// Licensed under Apache License v2.0
//
// See LICENSE.txt for license information
// See CONTRIBUTORS.md for the list of Swift Distributed Actors project authors
//
// SPDX-License-Identifier: Apache-2.0
//
//===----------------------------------------------------------------------===//


syntax = "proto3";

option optimize_for = SPEED;
option swift_prefix = "Proto";

import "ActorAddress.proto";
import "Cluster/ClusterEvents.proto";

// FIXME: this is not a 1:1 yet but shall become
message ClusterShellMessage {
    oneof message {
        // Not all messages are serializable, on purpose, as they are not intended to cross over the network
        ClusterEvent clusterEvent = 1;
        ClusterGossip gossip = 2;
    }
}

// TODO: MembershipGossip?
// TODO restructure that it should be more about who saw what node in what state, not the ClusterEvents, as the "from" status does not matter
message ClusterGossip {
    // origin of the gossip
    UniqueNode from = 1;
    repeated ClusterEvent clusterEvents = 2; // TODO: Something else, "membership diff"
}
